Renamed css class for fixed navbar spacing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -116,8 +116,7 @@ datalist {
     width: 100%;
     z-index: 10;
   }
-  .container,
-  .container-fluid {
+  .nav-space {
     padding-top: 3rem;
   }
 }
